@@ -1,0 +1,4 @@
+# Alpha Debian
+TARGETOS = alpha-unknown-linux2.2
+HOSTOS   = alpha-unknown-linux2.2
+
